devops/k8s/dev/service-backend-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: esprit-market-backend-dev
  namespace: esprit-market
spec:
  selector:
    app: esprit-market-backend-dev
  ports:
    - port: 8088
      targetPort: http
