devops/k8s/dev/service-frontend-dev.yaml
apiVersion: v1
kind: Service
metadata:
  name: esprit-market-frontend-dev
  namespace: esprit-market
spec:
  selector:
    app: esprit-market-frontend-dev
  ports:
    - port: 80
      targetPort: http
